fixing side-menu on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -77,13 +77,21 @@ nav {
   text-align: center;
 }
 
+nav .hide {
+  display: none;
+}
+
+.top-bar {
+  display: none;
+}
+
 section {
   flex: 1 1 auto;
   padding: 20px 2em;
   overflow: auto;
 }
 
-img.logo {
+nav img.logo {
   max-width: 85%;
   display: block;
   margin: 1em auto;
@@ -122,8 +130,9 @@ form.mautic {
 .mautic input {
   width: 75%;
   width: calc(100% - 2em);
-  padding: 0.2em;
-  font-size: 1.25em;
+  padding: 0 0.2rem;
+  line-height: 1.5rem;
+  font-size: 1.125rem;
   border: 1px solid #999;
   border-radius: 5px 0 0 5px;
   border-right: 0; 
@@ -131,10 +140,11 @@ form.mautic {
 }
 
 .mautic button {
-  padding: 0.2em;
+  padding: 0 0.25rem;
+  line-height: 1.5rem;
   border: 1px solid #999;
   border-radius: 0 5px 5px 0;
-  font-size: 1.25em;
+  font-size: 1.125rem;
   background-color: #efefef;
 }
 
@@ -162,3 +172,76 @@ form.mautic {
   color: #de00ff;
 }
 
+
+
+/* Mobile  */
+
+@media only screen and (max-width: 768px) {
+  nav {
+    position: absolute;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    opacity: 1;
+    transition: left 0.25s;
+  }
+   nav.is-visible {
+    left: 0;
+    transition: left 0.25s;
+  }
+  nav .hide {
+    display: inline-block;
+  }
+
+  section {
+    /* leaving space for the fixed top bar*/
+    margin-top: 30px;
+  }
+
+  .top-bar {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    background: white;
+    height: 30px;
+    overflow: hidden;
+    border-bottom: 1px solid #eee;
+  }
+
+  .top-bar img.logo {
+    display: inline-block;
+    height: 16px;
+    margin-right: 0.25em;
+  }
+
+  .top-bar h1 {
+    font-size: 25px;
+    line-height: 30px;
+    display: block;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  nav button,
+  .top-bar button {
+    border: 0;
+    background: transparent;
+    line-height: 30px;
+    cursor: pointer;
+  }
+
+  button.hide {
+    float: right;
+    margin-right: 0.25em;
+    border-radius: 50%;
+    border: 1px solid #666;
+    width: 2em;
+    height: 2em;
+    line-height: 1.8em;
+    text-align: center;
+    margin-top: 0.25em;
+    color: #666;
+  }
+}
